--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Mejor Ruta</title>
 
   <base href="/" />
 
@@ -17,6 +17,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAF8555jIeZQYnJs9-o7J0zc5st5gXUzA4"></script>
+
 </head>
 
 <body>
