--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAF8555jIeZQYnJs9-o7J0zc5st5gXUzA4"></script>
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAePKhO_0-t-YTcVe0lEP--uvoMVFA5QlE&callback=initMap&libraries=&v=weekly">
+</script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAF8555jIeZQYnJs9-o7J0zc5st5gXUzA4&callback=initMap&libraries=&v=weekly"></script> -->
 
 </head>
 
